# dtcc-deploy

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml  setup-server.sh
dtcc_deploy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_server/: __init__.py  client.py  server.py
tests/: conftest.py  test_api_health.py
